RESOLVED FIXED299675
[JSC] Suppprt `Promise.race` in async stack trace
https://bugs.webkit.org/show_bug.cgi?id=299675
Summary [JSC] Suppprt `Promise.race` in async stack trace
Sosuke Suzuki
Reported 2025-09-27 15:02:04 PDT
This patch changes async stack trace to support `Promise.race`.
Attachments
Sosuke Suzuki
Comment 1 2025-09-27 15:04:39 PDT
EWS
Comment 2 2025-09-30 19:13:39 PDT
Committed 300795@main (eb9fff609573): <https://commits.webkit.org/300795@main> Reviewed commits have been landed. Closing PR #51449 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-09-30 19:16:04 PDT
Radar WebKit Bug Importer
Comment 4 2025-09-30 19:16:05 PDT
Note You need to log in before you can comment on or make changes to this bug.