[JSC] Support `Promise.race` in async stack trace https://bugs.webkit.org/show_bug.cgi?id=299675

Reviewed by Yusuke Suzuki.

This patch changes async stack trace to support `Promise.race`.

Test: JSTests/stress/async-stack-trace-promise-race-basic.js
* JSTests/stress/async-stack-trace-promise-race-basic.js: Added.
(nop):
(shouldThrowAsync):
(throw.new.Error.async fine):
(throw.new.Error.async thrower):
(throw.new.Error.async run):
(async task1):
(async task2):
(async task3):
(async run):
(throw.new.Error.async drainMicrotasks):
* Source/JavaScriptCore/builtins/PromiseConstructor.js:
(race):
* Source/JavaScriptCore/interpreter/Interpreter.cpp:
(JSC::Interpreter::getAsyncStackTrace):

Canonical link: https://commits.webkit.org/300795@main